--- a/devapp-client-master-1.4/public/css/register.css
+++ b/devapp-client-master-1.4/public/css/register.css
@@ -1,153 +1,316 @@
 @charset "UTF-8";
 @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+
+input[type=submit] {-webkit-appearance:none;}
+body {
+  font-family: "Noto Sans KR", sans-serif;
+  /* Modal Content/Box */
+}
+
 header {
-  margin-bottom: 50px;
   box-shadow: 1px 2px 3px #d1d1d1;
   background: white;
 }
 
+@media screen and (max-width: 768px) {
+  header {
+    box-shadow: none;
+  }
+}
 nav .nav-container {
-  width: 1080px;
   justify-content: space-between;
-  margin: 0 auto;
+  padding: 0 16px;
+  margin-right: auto;
   display: flex;
 }
-.nav-left {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.nav-left ul {
-  display: flex;
-}
-.nav-left ul li {
+nav .nav-container .nav-left {
+  margin: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 20px;
 }
-.nav-left ul li .logo {
-  background: url("ca@2x.png") no-repeat;
-  background-size: 100%;
-  height: 30px;
-  width: 30px;
+nav .nav-container .nav-left ul {
+  display: flex;
 }
-.nav-left ul li p {
+nav .nav-container .nav-left ul li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 20px;
+  color: #7bb4e6;
+}
+nav .nav-container .nav-left ul li i {
+  margin-right: 10px;
+  font-size: 16px;
+}
+nav .nav-container .nav-left ul li h1 {
   font-size: 20px;
   font-weight: 800;
 }
-.nav-right ul {
+nav .nav-container .nav-right {
+  margin-right: 10px;
+}
+nav .nav-container .nav-right ul {
   display: flex;
   padding: 25px 0px;
 }
-.nav-right ul li {
+nav .nav-container .nav-right ul li {
   margin-right: 5px;
 }
-.nav-right ul li:nth-child(2) nav .nav-right ul li:nth-child(3) {
+nav .nav-container .nav-right ul li:nth-child(2) nav .nav-container .nav-right ul li:nth-child(3) {
   display: flex;
   align-items: flex-end;
   padding-bottom: 2px;
 }
-.nav-right ul li a {
+nav .nav-container .nav-right ul li a {
   font-weight: 700;
   text-decoration: none;
   color: black;
 }
-.nav-right ul li a .fa-user-circle {
-  color: #525252;
+nav .nav-container .nav-right ul li a .fa-user-circle {
+  color: #7bb4e6;
   font-size: 20px;
 }
-.nav-right ul li a .fa-sign-out-alt {
+nav .nav-container .nav-right ul li a .fa-sign-out-alt {
   margin-left: 2px;
-  color: #7bb4e6;
+  color: #525252;
   font-size: 18px;
   text-align: center;
 }
-.nav-right ul li .user {
+nav .nav-container .nav-right ul li .user {
   font-size: 13px;
   color: #464343;
   font-family: Noto Sans CJK KR Regular, "맑은 고딕", malgun-gothic;
 }
+nav .mobile-bar {
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  nav .mobile-bar {
+    display: flex;
+    background: #539cdb;
+    border: none;
+    height: 40px;
+    align-items: center;
+  }
+  nav .mobile-bar i {
+    margin: 0 10px;
+    color: white;
+  }
+  nav .mobile-bar i:hover {
+    cursor: pointer;
+  }
+  nav .mobile-bar p {
+    color: white;
+    margin-top: -3px;
+    font-weight: 500;
+  }
+}
 
 footer {
+  background: #F6F6F6;
   border-top: 2px solid #e7e6e6;
-  margin-top: 20px;
 }
 footer .footer-container {
   margin: 0 auto;
-  width: 1080px;
   display: flex;
   align-items: center;
-  height: 80px;
+  justify-content: center;
 }
-footer .footer-container p {
+footer .footer-container .copyright {
+  padding: 10px;
   line-height: 15px;
   color: #aaa9a9;
   font-size: 10px;
 }
-footer .footer-container p span {
+footer .footer-container .copyright span {
   font-weight: 550;
 }
-
-body {
-  background: #F6F6F6;
+footer .footer-container .blockEp {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  overflow: auto;
 }
 
-.container-fluid {
-  margin: 0 auto;
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
+.wrap {
   width: 100%;
-  min-height: 300px;
+  height: 100%;
+  display: flex;
 }
-/*
-.aside {
-  margin-right: 40px;
-  box-shadow: 1px 3px 3px gray;
+
+.main {
+  height: 100%;
+  display: flex;
+  flex-grow: 1;
+  align-items: stretch;
 }
-.aside ul li {
-  width: 230px;
+
+.wide-menu {
+  transition: 1s;
+  position: flex;
+  left: 0;
+  z-index: 2;
+  background: #31608a;
+}
+.wide-menu .sideIcons {
+  margin-top: 10px;
+}
+.wide-menu .sideIcons div {
+  width: 50px;
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 60px;
-  background: white;
 }
-.aside ul li:nth-child(2) {
+.wide-menu .sideIcons div .logo {
+  background: url("ca@2x.png") no-repeat white;
+  border-radius: 50%;
+  background-size: 100%;
+  height: 30px;
+  width: 30px;
+}
+[class^=side-tag] {
+  text-align: right;
+  font-size: 14px;
+  display: none;
+  position: absolute;
+  left: 100%;
+  float: right;
+  padding: 10px 12px 12px 20px;
+  min-width: 117px;
+  text-align: left;
+  /* background: #fa4b4b; */
+  background: #FFDA91;
+  box-shadow: 1px 2px 3px #d1d1d1;
+  color: white;
+  z-index: 30;
+}
+.wide-menu .sideIcons div > a > i {
+  width: 16px;
+  color: #FFDA91;
+}
+.wide-menu .sideIcons div a {
+  font-weight: 500;
+  text-decoration: none;
+  text-align: left;
+}
+
+.container {
+  flex-grow: 1;
+  overflow: auto;
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+}
+
+.content {
+  flex-grow: 1;
+}
+
+.menuModal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 1;
+}
+
+@media screen and (min-width: 769px) {
+  .menuModal {
+    display: none;
+  }
+}
+.mobile-menu {
+  display: none;
+  background: white;
+  width: 40%;
+  min-width: 197px;
+  transform: translate(-198px);
+  transition: 2s;
+}
+@media screen and (max-width: 769px) {
+    .mobile-menu {
+    display: none;
+    }
+}
+.mobile-menu ul > li:nth-child(1) {
+  display: flex;
+  color: white;
+  background: #539cdb;
+  align-items: center;
+}
+.mobile-menu ul > li:nth-child(1) div {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  font-size: 18px;
+  margin-top: 84px;
+  margin-bottom: 8px;
+}
+.mobile-menu ul > li:nth-child(1) div > :nth-child(1) {
+  margin-left: 15px;
+}
+.mobile-menu ul > li:nth-child(1) div > :nth-child(2) {
+  margin-right: 20px;
+}
+.mobile-menu ul > li:nth-child(1) div > :nth-child(2):hover {
+  cursor: pointer;
+  color: #fcc44d;
+}
+.mobile-menu ul > li:nth-child(n+2) {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
   border-bottom: 1px solid lightgray;
 }
-.aside ul li:nth-child(1) {
-  background: #539cdb;
-}
-.aside ul li:nth-child(1) a {
+.mobile-menu ul > li:nth-child(n+2):hover {
+  background: #bce0ff;
   color: white;
 }
-.aside ul li a {
+.mobile-menu ul a {
+    width: 100%;
+  display: block;
+  text-align: left;
+  margin: 13px 15px;
   font-weight: 700;
   text-decoration: none;
   color: black;
-  font-size: 18px;
-  text-align: center;
+  font-size: 14px;
+  color: inherit;
 }
-*/
+
+@media screen and (max-width: 768px) {
+  .wide-menu {
+    display: none;
+  }
+}
 .registerContent {
+  margin: 80px auto;
+  flex-grow: 1;
   background: white;
-  box-shadow: 1px 3px 3px gray;
+  max-width: 1100px;
+  min-width: 250px;
+  width: 50%;
   height: 400px;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
 }
-.registerContent h2 {
-  display: block;
-  font-weight: bold;
-  font-size: 22px;
-  position: absolute;
-  top: 5%;
-  color: #686666;
-}
 .registerContent form > * {
   display: block;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 .registerContent form p {
   margin-top: 10px;
@@ -157,20 +320,63 @@ body {
 }
 .registerContent form [required] {
   border: none;
-  border-bottom: 1.5px solid #a3a1a1;
+  border-bottom: 1.5px solid #5b94c5;
   height: 25px;
   width: 200px;
 }
-
+.registerContent form [type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
 .registerContent form [type=submit] {
-  border: 2px solid #539cdb;
+  border: none;
   border-radius: 15px;
-  margin-top: 20px;
+  margin-top: 30px;
   background: #539cdb;
   color: white;
   height: 40px;
   width: 200px;
-  font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+  .registerContent {
+    margin: 0 auto;
+    width: 100%;
+    box-shadow: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .registerContent h2 {
+    display: none;
+  }
+  .registerContent form > * {
+    display: block;
+    margin-bottom: 5px;
+  }
+  .registerContent form p {
+    margin-top: 10px;
+    font-weight: bold;
+    color: #666666;
+    font-size: 14px;
+  }
+  .registerContent form [required] {
+    border: none;
+    border-bottom: 1.5px solid #a3a1a1;
+    height: 25px;
+    width: 200px;
+  }
+  .registerContent form [type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
+  .registerContent form [type=submit] {
+    border: 2px solid #539cdb;
+    border-radius: 15px;
+    margin-top: 20px;
+    background: #539cdb;
+    color: white;
+    height: 40px;
+    width: 200px;
+  }
 }
 
 /*# sourceMappingURL=/register.29451d7d.css.map */
