--- a/devapp-client-master-1.4/public/css/transfer.css
+++ b/devapp-client-master-1.4/public/css/transfer.css
@@ -1,17 +1,31 @@
 @charset "UTF-8";
 @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
-header {
-  margin-bottom: 50px;
-  box-shadow: 1px 2px 3px #d1d1d1;
+@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+
+input[type=submit] {-webkit-appearance:none;}
+body {
+  font-family: "Noto Sans KR", sans-serif;
+  /* Modal Content/Box */
 }
 
+header {
+  box-shadow: 1px 2px 3px #d1d1d1;
+  background: white;
+}
+
+@media screen and (max-width: 768px) {
+  header {
+    box-shadow: none;
+  }
+}
 nav .nav-container {
-  width: 1080px;
   justify-content: space-between;
-  margin: 0 auto;
+  padding: 0 16px;
+  margin-right: auto;
   display: flex;
 }
 nav .nav-container .nav-left {
+  margin: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,21 +37,19 @@ nav .nav-container .nav-left ul li {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 30px;
+  margin-right: 20px;
+  color: #7bb4e6;
 }
-nav .nav-container .nav-left ul li .logo {
-  background: url("ca@2x.png") no-repeat;
-  background-size: 100%;
-  height: 30px;
-  width: 30px;
+nav .nav-container .nav-left ul li i {
+  margin-right: 10px;
+  font-size: 16px;
 }
-nav .nav-container .nav-left ul li:nth-child(3) {
-  border-bottom: 3px solid #57a8f0;
+nav .nav-container .nav-left ul li h1 {
+  font-size: 20px;
+  font-weight: 800;
 }
-nav .nav-container .nav-left ul li a {
-  font-weight: bold;
-  text-decoration: none;
-  color: #444444;
+nav .nav-container .nav-right {
+  margin-right: 10px;
 }
 nav .nav-container .nav-right ul {
   display: flex;
@@ -57,12 +69,12 @@ nav .nav-container .nav-right ul li a {
   color: black;
 }
 nav .nav-container .nav-right ul li a .fa-user-circle {
-  color: #525252;
+  color: #7bb4e6;
   font-size: 20px;
 }
 nav .nav-container .nav-right ul li a .fa-sign-out-alt {
   margin-left: 2px;
-  color: #7bb4e6;
+  color: #525252;
   font-size: 18px;
   text-align: center;
 }
@@ -71,36 +83,220 @@ nav .nav-container .nav-right ul li .user {
   color: #464343;
   font-family: Noto Sans CJK KR Regular, "맑은 고딕", malgun-gothic;
 }
+nav .mobile-bar {
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  nav .mobile-bar {
+    display: flex;
+    background: #539cdb;
+    border: none;
+    height: 40px;
+    align-items: center;
+  }
+  nav .mobile-bar i {
+    margin: 0 10px;
+    color: white;
+  }
+  nav .mobile-bar i:hover {
+    cursor: pointer;
+  }
+  nav .mobile-bar p {
+    color: white;
+    margin-top: -3px;
+    font-weight: 500;
+  }
+}
 
 footer {
+  background: #F6F6F6;
   border-top: 2px solid #e7e6e6;
-  margin-top: 20px;
 }
 footer .footer-container {
   margin: 0 auto;
-  width: 1080px;
   display: flex;
   align-items: center;
-  height: 80px;
+  justify-content: center;
 }
-footer .footer-container p {
+footer .footer-container .copyright {
+  padding: 10px;
   line-height: 15px;
   color: #aaa9a9;
   font-size: 10px;
 }
-footer .footer-container p span {
+footer .footer-container .copyright span {
   font-weight: 550;
 }
+footer .footer-container .blockEp {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  overflow: auto;
+}
 
-html {
-  font-family: "Noto Sans KR", sans-serif;
-  /* Modal Content/Box */
+body, html {
+  height: 100%;
+  margin: 0;
 }
-html .container {
-  margin: 0 auto;
-  width: 1080px;
+
+.wrap {
+  width: 100%;
+  height: 100%;
+  display: flex;
 }
-html .container .modal {
+
+.main {
+  height: 100%;
+  display: flex;
+  flex-grow: 1;
+  align-items: stretch;
+}
+
+.wide-menu {
+  transition: 1s;
+  position: flex;
+  left: 0;
+  z-index: 2;
+  background: #31608a;
+}
+.wide-menu .sideIcons {
+  margin-top: 10px;
+}
+.wide-menu .sideIcons div {
+  width: 50px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 60px;
+}
+.wide-menu .sideIcons div .logo {
+  background: url("ca@2x.png") no-repeat white;
+  border-radius: 50%;
+  background-size: 100%;
+  height: 30px;
+  width: 30px;
+}
+.wide-menu .sideIcons div [class^=side-tag] {
+  text-align: right;
+  font-size: 14px;
+  display: none;
+  position: absolute;
+  left: 100%;
+  float: right;
+  padding: 10px 12px 12px 20px;
+  min-width: 86px;
+  text-align: left;
+  /* background: #fa4b4b; */
+  background: #FFDA91;
+  box-shadow: 1px 2px 3px #d1d1d1;
+  color: white;
+  z-index: 30;
+}
+.wide-menu .sideIcons div > a > i {
+  width: 16px;
+  color: #FFDA91;
+}
+.wide-menu .sideIcons div a {
+  font-weight: 500;
+  text-decoration: none;
+  color: black;
+  text-align: center;
+}
+
+.container {
+  flex-grow: 1;
+  overflow: auto;
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+}
+
+.content {
+  flex-grow: 1;
+}
+
+.menuModal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 1;
+}
+
+@media screen and (min-width: 769px) {
+  .menuModal {
+    display: none;
+  }
+}
+.mobile-menu {
+  display: none;
+  background: white;
+  width: 40%;
+  min-width: 197px;
+  transform: translate(-198px);
+  transition: 2s;
+}
+@media screen and (max-width: 769px) {
+    .mobile-menu {
+    display: none;
+    }
+}
+.mobile-menu ul > li:nth-child(1) {
+  display: flex;
+  color: white;
+  background: #539cdb;
+  align-items: center;
+}
+.mobile-menu ul > li:nth-child(1) div {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  font-size: 18px;
+  margin-top: 84px;
+  margin-bottom: 8px;
+}
+.mobile-menu ul > li:nth-child(1) div > :nth-child(1) {
+  margin-left: 15px;
+}
+.mobile-menu ul > li:nth-child(1) div > :nth-child(2) {
+  margin-right: 20px;
+}
+.mobile-menu ul > li:nth-child(1) div > :nth-child(2):hover {
+  cursor: pointer;
+  color: #fcc44d;
+}
+.mobile-menu ul > li:nth-child(n+2) {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  border-bottom: 1px solid lightgray;
+}
+.mobile-menu ul > li:nth-child(n+2):hover {
+  background: #bce0ff;
+  color: white;
+}
+.mobile-menu ul a {
+    width: 100%;
+  display: block;
+  text-align: left;
+  margin: 13px 15px;
+  font-weight: 700;
+  text-decoration: none;
+  color: black;
+  font-size: 14px;
+  color: inherit;
+}
+
+@media screen and (max-width: 768px) {
+  .wide-menu {
+    display: none;
+  }
+}
+.modal {
   display: none;
   /* Hidden by default */
   position: fixed;
@@ -120,73 +316,86 @@ html .container .modal {
   background-color: rgba(0, 0, 0, 0.4);
   /* Black w/ opacity */
 }
-html .container .modal-content {
+
+.modal-content {
   background-color: #eeeeee;
   margin: 15% auto;
   /* 15% from the top and centered */
-  border: 1px solid #888;
-  width: 400px;
+  width: 20%;
+  min-width: 300px;
+
   /* Could be more or less, depending on screen size */
 }
-html .container .modal-content .end {
+.modal-content .end {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #4081bb;
+  background: #539cdb;
   height: 30px;
 }
-html .container .modal-content .end .tr-logo {
+.modal-content .end .tr-logo {
   color: white;
   margin-left: 5px;
 }
-html .container .modal-content .end .fa-times {
+.modal-content .end .fa-times {
   margin-right: 10px;
   color: white;
   font-size: 20px;
   font-weight: bold;
 }
-html .container .modal-content .close:hover,
-html .container .modal-content .close:focus {
-  color: black;
+.modal-content .close:hover,
+.modal-content .close:focus {
+  color: #fcc44d;
   text-decoration: none;
   cursor: pointer;
 }
-html .container .modal-container {
+
+.modal-container {
+  
   position: relative;
   margin: 0 auto;
-  height: 110px;
   display: flex;
   justify-content: center;
   background: white;
   border-bottom: 1px solid #cecaca;
   margin-bottom: 10px;
 }
-html .container .modal-container .search-bar {
+.modal-container .search-bar {
   margin-top: 25px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
 }
-html .container .modal-container .search-bar h2 {
+.modal-container .search-bar h2 {
   margin-bottom: 10px;
   font-weight: 400;
   color: #5c5b5b;
 }
-html .container .modal-container .search-bar .modal-input {
+.modal-container .search-bar .modal-input {
   border: 1px solid #d1cdcd;
   margin-right: 10px;
+  margin-bottom: 10px;
   height: 25px;
+  min-width: 100%;
+  padding: 5px;
+  box-sizing: border-box;
 }
-html .container .modal-container .search-bar .search {
+.modal-container .search-bar .search {
   border: none;
   border-radius: 3px;
   background: #539cdb;
   color: white;
   height: 30px;
-  width: 50px;
+  min-width: 90%;
+  margin-bottom: 10px;
 }
-html .container .transferlist {
+
+.transferlist {
   height: 150px;
   overflow: auto;
 }
-html .container .transferlist .transferUser {
+.transferlist .transferUser {
   margin: 0 10px 10px;
   height: 40px;
   background: white;
@@ -195,120 +404,165 @@ html .container .transferlist .transferUser {
   align-items: center;
   border: 1px solid #cfcdcd;
 }
-html .container .transferlist .transferUser p {
+.transferlist .transferUser p {
   color: #727070;
+  cursor: inherit;
 }
-html .container .transferlist .transferUser:hover {
+.transferlist .transferUser:hover {
   background: #7ec3ff7e;
+  cursor: pointer;
 }
-html .container h1 {
-  display: blcok;
-  margin-bottom: 30px;
-  font-size: 25px;
-  font-weight: bold;
-  color: #464242;
+
+.list-wrap {
+  margin: 50px auto;
+  display: flex;
+  justify-content: center;
 }
-html .container [class^=panel-] {
+
+.list-body {
+  background: white;
+  max-width: 1100px;
+  min-width: 460px;
+  width: 55%;
+  min-height: 520px;
+  position: relative;
+}
+
+@media screen and (max-width: 768px) {
+  .list-body {
+    min-width: 350px;
+    width: 100%;
+    min-height: 520px;
+    box-shadow: none;
+  }
+  .listBody h2 {
+    display: none;
+  }
+}
+.transferPage {
+  min-height: 305px;
+  margin-top: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-flow: column;
+  
+  align-items: flex-start;
+  margin-bottom: 10px;
+}
+
+[class^=panel-] {
+  width: 100%;
+  font-size: 14px;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-areas: "info info info info  info-2 info-2";
-  padding: 0 20px;
-  box-shadow: 1px 2px 2px 2px gray;
-  margin-bottom: 20px;
 }
-html .container .info {
+@media screen and (max-width: 768px) {
+    [class^=panel-] { 
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-areas: "info info  info-2 info-2";
+    }
+}
+[class^=panel-]:nth-child(1) {
+  border: 1px solid lightgray;
+}
+[class^=panel-]:nth-child(n+2) {
+  border: 1px solid lightgray;
+  border-top: none;
+}
+.pp::after{
+  content: ' \20A9';
+}
+
+.info {
   grid-area: info;
-  margin: 10px 0;
+  margin: 5px 20px;
 }
-html .container .info * {
+.info * {
   line-height: 10px;
   margin: 5px;
 }
-html .container .info .id {
-  color: #337ab7;
+.info .id {
+  color: #539cdb;
 }
-html .container .info .place {
+.info .place {
   font-weight: 500;
   margin-bottom: 10px;
 }
-html .container .info .address {
-  font-size: 14px;
+.info .address {
+  font-size: 12px;
   color: gray;
 }
-html .container .info-2 {
+
+.info-2 {
   justify-content: flex-end;
   display: flex;
   align-items: center;
-  margin: 20px 0;
   grid-area: info-2;
+  margin: 5px 20px;
 }
-html .container .info-2 .pp {
+.info-2 .pp {
   margin-right: 20px;
-}
-html .container .info-2 .pp .price {
   color: gray;
-  font-size: 14px;
+  font-size: 12px;
+  display: flex;
+  flex-flow: none;
 }
-html .container .info-2 .pp .price::after {
-    content:"(억) 원"
-    
-    }
-html .container .info-2 .pp .pay {
-  color: #337ab7;
+.info-2 .pp .price {
+  color: gray;
+  font-size: 12px;
+  display: flex;
+  flex-flow: none;
 }
-html .container .info-2 input {
-  min-width: 100px;
+.info-2 .pp .pay {
+  color: #f37252;
+  font-size: 13px;
+}
+.info-2 input {
+-webkit-appearance:none;
+  min-width: 60px;
   min-height: 50px;
-  background: #337ab7;
+  background: #539cdb;
   color: white;
   font-weight: bold;
   border: none;
+  border-radius: 10px;
 }
-html .container .info-2 input:active {
-  background: #337ab7;
+.info-2 input:active {
+  background: #539cdb;
 }
-html .container .pagination-container {
+
+.pagination-container {
   display: flex;
   justify-content: center;
-  margin-top: 50px;
 }
-html .container .pagination-container .pagination {
+.pagination-container .pagination {
   margin: 0 auto;
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
-html .container .pagination-container .pagination li {
-  margin-left: 0;
-  box-shadow: 1px 0 0 0 #b4b2b2, 0 1px 0 0 #b4b2b2, 1px 1px 0 0 #b4b2b2, 1px 0 0 0 #b4b2b2 inset, 0 1px 0 0 #b4b2b2 inset;
-}
-html .container .pagination-container .pagination li a {
-  font-weight: bold;
+.pagination-container .pagination li a {
+  font-weight: 500;
   text-decoration: none;
   color: black;
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #337ab7;
+  font-size: 12px;
 }
-html .container .pagination-container .pagination li:first-child, html .container .pagination-container .pagination li:last-child {
-  width: 80px;
+.pagination-container .pagination li > .preiv, .pagination-container .pagination li > .next {
+  width: 50px;
   height: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
-html .container .pagination-container .pagination li:first-child {
-  border-radius: 6px 0px 0px 6px;
+.pagination-container .pagination li:hover {
+  background: #539CDB;
 }
-html .container .pagination-container .pagination li:last-child {
-  border-radius: 0px 6px 6px 0px;
-}
-html .container .pagination-container .pagination li:hover {
-  background: #5555fa;
-}
-html .container .pagination-container .pagination li:hover a {
+.pagination-container .pagination li:hover a {
   color: white;
 }
 
-/*# sourceMappingURL=/main.77bb5cfd.css.map */
+/*# sourceMappingURL=/transfer.e3f2cfbb.css.map */
